<resources>
    <string name="app_name">LMSApp5</string>
    <string name="txt_msgHello">Hello World!</string>
    <string name="txt_msgLogin">Faça o seu Login no Sistema:</string>
    <string name="txt_titUsuario">Usuário:</string>
    <string name="txt_titPassword">Password:</string>
    <string name="txt_btnLogin">LOGIN</string>
    <string name="txt_hintUsuario">Informar o Nome do Usuário</string>
    <string name="txt_hintPassword">Informar a Password do Usuário</string>
    <string name="txt_hintParametros">Parâmtros da Tela Inicial</string>
    <string name="txt_btnTelaInicial">TELA INICIAL</string>
    <string name="txt_btnPaises">PAÍSES</string>
    <string name="action_buscar">Buscar</string>
    <string name="action_atualizar">Atulaizar</string>
    <string name="action_config">Configurações</string>
    <string name="navigation_drawer_open">Menu_Opened</string>
    <string name="navigation_drawer_close">Menu_Close</string>
</resources>