<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/msg_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/txt_msgLogin" />

    <TextView
        android:id="@+id/tit_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/txt_titUsuario" />

    <EditText
        android:id="@+id/cam_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="20sp"
        android:inputType="textPersonName"
        android:hint="@string/txt_hintUsuario"/>

    <TextView
        android:id="@+id/tit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/txt_titPassword" />

    <EditText
        android:id="@+id/cam_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:hint="@string/txt_hintPassword"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/txt_btnLogin" />

    <ImageView
        android:id="@+id/img_login"
        android:layout_width="match_parent"
        android:layout_height="405dp"
        app:srcCompat="@drawable/img_login" />


</LinearLayout>